--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://diet-suggestion-app-fcp.netlify.app/home",
+  "homepage": "https://diet-suggestion-app-fcp.netlify.app/",
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
